# kentskooking-nodes

./: .gitignore  CLAUDE.md  LICENSE  MIT-pizurny.txt  NOTICE  README.draft.md  README.md  __init__.py  checkpoint_preview_loader.py  comfyui_js_instructions.txt  image_iterative_sampler.py  iterative_checkpoint_controller.py  pyproject.toml  requirements.txt  triangle_wave_controller.py  triangle_wave_controller_advanced.py  video_checkpoint_controller.py  video_iterative_sampler.py  video_iterative_sampler_advanced.py  wave_clip_vision_encode.py  wave_controller.py  wave_controlnet_apply.py  wave_controlnet_controller.py  wave_ipadapter_advanced.py  wave_ipadapter_controller.py  wave_style_model_apply.py  wave_visualizer.py
examples/: Iterative Flux.json
examples/workflows/: FLUX Video Iterative WF_kentskooking-nodes.json  Image Iterative Sampler - zImage.json  Video Interpolate WF (SD 1.5).json  Video Interpolate WF (SDXL).json  Video Interpolate WF - FLUX.json  WF_using_standard_nodes.json  kentskooking_nodes_all.json
js/: kentskooking_node_width.js
nodes/: __init__.py  checkpoint_preview_loader.py  explorer_conditioning_sampler.py  explorer_conditioning_wave_controller.py  image_iterative_sampler.py  image_wave_controller.py  interpolation_wave_controller.py  iterative_checkpoint_controller.py  video_interpolate_sampler.py  video_iterative_sampler.py  video_wave_controller.py  wave_clip_vision_encode.py  wave_controlnet_apply.py  wave_controlnet_controller.py  wave_ipadapter_advanced.py  wave_ipadapter_controller.py  wave_style_model_apply.py  wave_visualizer.py
utils/: __init__.py  kentskooking_utils.py
