[project]
name = "kentskooking-nodes"
description = "various deforum style effects"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# kentskooking - ComfyUI Custom Nodes", "# Triangle wave-controlled iterative video sampling", "# All core dependencies are already provided by ComfyUI's requirements.txt", "# This file is provided for reference and documentation purposes.", "# Core dependencies (provided by ComfyUI):", "torch", "numpy>=1.25.0", "Pillow", "safetensors>=0.4.2", "# Optional dependencies:", "# The following custom nodes are optional and enable additional features if installed:", "# - comfyui_ipadapter_plus: For IPAdapter wave modulation (wave_ipadapter_*.py nodes)", "#   Install: cd custom_nodes && git clone https://github.com/cubiq/ComfyUI_IPAdapter_plus.git comfyui_ipadapter_plus"]

[project.urls]
Repository = "https://github.com/Kentskooking/kentskooking-nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Kentskooking/kentskooking-nodes/wiki"
"Bug Tracker" = "https://github.com/Kentskooking/kentskooking-nodes/issues"

[tool.comfy]
PublisherId = "kentskooking"
DisplayName = "kentskooking-nodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

